# osqp.rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: build-and-test.yml  update-documentation.yml
osqp/: all.html  enum.LinsysSolver.html  enum.PolishStatus.html  enum.SetupError.html  enum.Status.html  index.html  sidebar-items.js  struct.CscMatrix.html  struct.DualInfeasibilityCertificate.html  struct.Failure.html  struct.PrimalInfeasibilityCertificate.html  struct.Problem.html  struct.Settings.html  struct.Solution.html
osqp-sys/: Cargo.toml  bindings.h  build.rs  generate_bindings.sh
osqp-sys/src/: bindings.rs  ffi.rs  ffi_internal.rs  lib.rs
osqp/csc/: struct.CscMatrix.html
osqp/settings/: enum.LinsysSolver.html  struct.Settings.html
osqp/status/: enum.PolishStatus.html  enum.Status.html  struct.DualInfeasibilityCertificate.html  struct.Failure.html  struct.PrimalInfeasibilityCertificate.html  struct.Solution.html
osqp_sys/: all.html  constant.OSQP_ALGEBRA_LOAD_ERROR.html  constant.OSQP_CODEGEN_DEFINES_ERROR.html  constant.OSQP_DATA_NOT_INITIALIZED.html  constant.OSQP_DATA_VALIDATION_ERROR.html  constant.OSQP_DIAGONAL_PRECONDITIONER.html  constant.OSQP_DIRECT_SOLVER.html  constant.OSQP_DUAL_INFEASIBLE.html  constant.OSQP_DUAL_INFEASIBLE_INACCURATE.html  constant.OSQP_FOPEN_ERROR.html  constant.OSQP_FUNC_NOT_IMPLEMENTED.html  constant.OSQP_INDIRECT_SOLVER.html  constant.OSQP_LAST_ERROR_PLACE.html  constant.OSQP_LINSYS_SOLVER_INIT_ERROR.html  constant.OSQP_MAX_ITER_REACHED.html  constant.OSQP_MEM_ALLOC_ERROR.html  constant.OSQP_NONCVX_ERROR.html  constant.OSQP_NON_CVX.html  constant.OSQP_NO_ERROR.html  constant.OSQP_NO_PRECONDITIONER.html  constant.OSQP_PRIMAL_INFEASIBLE.html  constant.OSQP_PRIMAL_INFEASIBLE_INACCURATE.html  constant.OSQP_SETTINGS_VALIDATION_ERROR.html  constant.OSQP_SIGINT.html  constant.OSQP_SOLVED.html  constant.OSQP_SOLVED_INACCURATE.html  constant.OSQP_TIME_LIMIT_REACHED.html  constant.OSQP_UNKNOWN_SOLVER.html  constant.OSQP_UNSOLVED.html  constant.OSQP_WORKSPACE_NOT_INIT_ERROR.html  enum.OSQPTimer.html  fn.OSQPCscMatrix_free.html  fn.OSQPCscMatrix_new.html  fn.OSQPSettings_free.html  fn.OSQPSettings_new.html  fn.osqp_cleanup.html  fn.osqp_set_default_settings.html  fn.osqp_setup.html  fn.osqp_solve.html  fn.osqp_update_data_mat.html  (+20 more)
osqp_sys/bindings/: constant.OSQP_ALGEBRA_LOAD_ERROR.html  constant.OSQP_CODEGEN_DEFINES_ERROR.html  constant.OSQP_DATA_NOT_INITIALIZED.html  constant.OSQP_DATA_VALIDATION_ERROR.html  constant.OSQP_DIAGONAL_PRECONDITIONER.html  constant.OSQP_DIRECT_SOLVER.html  constant.OSQP_DUAL_INFEASIBLE.html  constant.OSQP_DUAL_INFEASIBLE_INACCURATE.html  constant.OSQP_FOPEN_ERROR.html  constant.OSQP_FUNC_NOT_IMPLEMENTED.html  constant.OSQP_INDIRECT_SOLVER.html  constant.OSQP_LAST_ERROR_PLACE.html  constant.OSQP_LINSYS_SOLVER_INIT_ERROR.html  constant.OSQP_MAX_ITER_REACHED.html  constant.OSQP_MEM_ALLOC_ERROR.html  constant.OSQP_NONCVX_ERROR.html  constant.OSQP_NON_CVX.html  constant.OSQP_NO_ERROR.html  constant.OSQP_NO_PRECONDITIONER.html  constant.OSQP_PRIMAL_INFEASIBLE.html  constant.OSQP_SIGINT.html  (+33 more)
src/: csc.rs  lib.rs  settings.rs  solution.rs  status.rs
(+28 files in other folders)
