[package]
name = "osqp"
version = "0.6.3-pre"
edition = "2015"
rust-version = "1.63"
description = "The OSQP (Operator Splitting Quadratic Program) solver."
authors = ["Edward Barnard <eabarnard@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://osqp.org/"
repository = "https://github.com/oxfordcontrol/osqp.rs/"
documentation = "https://docs.rs/osqp/0.6.3-pre/"
keywords = ["optimisation", "optimization", "programming", "quadratic", "linear"]

[workspace]

[dependencies]
osqp-sys = { version = "0.6.3-pre", path = "osqp-sys" }
