[package]
name = "osqp"
version = "1.0.1"
edition = "2015"
rust-version = "1.63"
description = "The OSQP (Operator Splitting Quadratic Program) solver."
authors = ["Edward Barnard <me@eab.ie>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://osqp.org/"
repository = "https://github.com/osqp/osqp.rs/"
documentation = "https://docs.rs/osqp/0.6.3/"
keywords = ["optimisation", "optimization", "programming", "quadratic", "linear"]

[workspace]

[dependencies]
osqp-sys = { version = "1.0.1", path = "osqp-sys" }
