[package]
name = "osqp-sys"
version = "0.6.0-pre"
description = "FFI bindings to the OSQP (Operator Splitting Quadratic Program) solver."
authors = ["Edward Barnard <eabarnard@gmail.com>"]
license = "Apache-2.0"
homepage = "https://osqp.org/"
repository = "https://github.com/oxfordcontrol/osqp.rs/"
#documentation = "https://docs.rs/osqp-sys/0.6.0-pre/"
categories = ["external-ffi-bindings"]
links = "osqp"

[build-dependencies]
cmake = "0.1.28"
cc = "1.0.36"
