[package]
name = "osqp-sys"
version = "1.0.1"
edition = "2015"
rust-version = "1.63"
description = "FFI bindings to the OSQP (Operator Splitting Quadratic Program) solver."
authors = ["Edward Barnard <me@eab.ie>"]
license = "Apache-2.0"
homepage = "https://osqp.org/"
repository = "https://github.com/osqp/osqp.rs/"
documentation = "https://docs.rs/osqp-sys/0.6.3/"
categories = ["external-ffi-bindings"]
links = "osqp"

[build-dependencies]
cc = "1.0.36"
cmake = "0.1.28"
fs_extra = "1.2.0"
